<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="3dp"
    app:cardCornerRadius="4dp"

    android:focusable="true"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_image_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageView"
            tools:text="Title" />

        <TextView
            android:id="@+id/Producer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="12sp"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Title"
            app:layout_constraintStart_toStartOf="@+id/Title"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            tools:text="Producer" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="12sp"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@+id/Producer"
            app:layout_constraintStart_toStartOf="@+id/Producer"
            app:layout_constraintTop_toBottomOf="@+id/Producer"
            tools:text="Description" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/price"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Description"
            app:layout_constraintStart_toStartOf="@+id/Description"
            app:layout_constraintTop_toBottomOf="@+id/Description"
            tools:text="Price: " />

        <TextView
            android:id="@+id/Amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/amount"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Price"
            app:layout_constraintStart_toStartOf="@+id/Price"
            app:layout_constraintTop_toBottomOf="@+id/Price"
            tools:text="Amount: " />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>